воскрешение сайта после Оли

--- a/index.service-carousel.partial.html
+++ b/index.service-carousel.partial.html
@@ -1,114 +1,122 @@
 <div class="veterinar-carousel container-lg col-8 mx-auto d-flex flex-column">
-  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators bg-info mt-5 col-2 mx-auto pr-0 service-carousel__round">
-      <li data-target="#carouselExampleIndicators bg-dark" data-slide-to="0" class="active"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
-      <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active card no-border" >
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators bg-info mt-5 col-2 mx-auto pr-0 service-carousel__round">
+            <li data-target="#carouselExampleIndicators bg-dark" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="6"></li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active card no-border">
                 <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
-          src="img/grooming.png" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title text-center">Pet Grooming </h4>
-          <p1 class="card-text carousel-any-p__subtitle fst-italic">Our groomers will make your pet the most beautiful.
-            Grooming in our clinic is absolutely safe and comfortable
-            for your pet.</p>
-            <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
-          </div>
-      </div>
-      <div class="carousel-item сard no-border">
-        <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
-          src="img/vaccacination.png" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title text-center">Pet Vaccination </h4>
-          <p1 class="card-text carousel-any-p__subtitle fst-italic">Our veterinary clinic offers vaccinations for your
-            pets. We use only certified vaccines and check the
-            allergic reaction.</p>
-            <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
-        </div>
-      </div>
-      <div class="carousel-item card  no-border">
-        <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
-          src="img/dental.png" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title text-center">Surgeries & Dental Care </h4>
-          <p1 class="card-text carousel-any-p__subtitle fst-italic">Our surgeons and dentists will perform all the
-            necessary procedures and interventions to restore the health
-            of your pet.</p>
-            <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
-        </div>
-      </div>
+                     src="img/grooming.png" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title text-center">Pet Grooming </h4>
+                    <p class="card-text carousel-any-p__subtitle fst-italic">Our groomers will make your pet the most
+                        beautiful.
+                        Grooming in our clinic is absolutely safe and comfortable
+                        for your pet.</p>
+                    <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
+                </div>
+            </div>
+            <div class="carousel-item сard no-border">
+                <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
+                     src="img/vaccacination.png" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title text-center">Pet Vaccination </h4>
+                    <p class="card-text carousel-any-p__subtitle fst-italic">Our veterinary clinic offers vaccinations
+                        for your
+                        pets. We use only certified vaccines and check the
+                        allergic reaction.</p>
+                    <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
+                </div>
+            </div>
+            <div class="carousel-item card  no-border">
+                <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
+                     src="img/dental.png" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title text-center">Surgeries & Dental Care </h4>
+                    <p class="card-text carousel-any-p__subtitle fst-italic">Our surgeons and dentists will perform all
+                        the
+                        necessary procedures and interventions to restore the health
+                        of your pet.</p>
+                    <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
+                </div>
+            </div>
 
-      <div class="carousel-item card no-border">
-        <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
-          src="img/adopt.png" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title text-center">Pet Adoption </h4>
-          <p1 class="card-text carousel-any-p__subtitle fst-italic">If you want to adopt a pet, our veterinary clinic
-            will help you determine its condition. We also can help
-            with choosing a pet.</p>
-            <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
+            <div class="carousel-item card no-border">
+                <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
+                     src="img/adopt.png" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title text-center">Pet Adoption </h4>
+                    <p class="card-text carousel-any-p__subtitle fst-italic">If you want to adopt a pet, our veterinary
+                        clinic
+                        will help you determine its condition. We also can help
+                        with choosing a pet.</p>
+                    <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
+                </div>
+            </div>
+            <div class="carousel-item card no-border">
+                <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
+                     src="img/pet-sit.png" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title text-center">Pet Sitting</h4>
+                    <p class="card-text carousel-any-p__subtitle fst-italic">If you need someone to look after your pet
+                        when
+                        you`re away, our specialists will be happy to do it.</p>
+                    <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
+                </div>
+            </div>
+            <div class="carousel-item card no-border ">
+                <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
+                     src="img/microc.png" alt="Card image cap">
+                <div class="card-body">
+                    <h4 class="card-title text-center">Microchipping</h4>
+                    <p class="card-text carousel-any-p__subtitle fst-italic">The chip contains a unique code with
+                        important
+                        information. If your pet is lost, it will be easy to return it
+                        to you</p>
+                    <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="carousel-item card no-border">
-        <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
-          src="img/pet-sit.png" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title text-center">Pet Sitting</h4>
-          <p1 class="card-text carousel-any-p__subtitle fst-italic">If you need someone to look after your pet when
-            you`re away, our specialists will be happy to do it.</p>
-            <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
-        </div>
-      </div>
-      <div class="carousel-item card no-border ">
-        <img class="service-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
-          src="img/microc.png" alt="Card image cap">
-        <div class="card-body">
-          <h4 class="card-title text-center">Microchipping</h4>
-          <p1 class="card-text carousel-any-p__subtitle fst-italic">The chip contains a unique code with important
-            information. If your pet is lost, it will be easy to return it
-            to you</p>
-            <p class="card-text carousel-any-p__subtitle bold text-center mb-5">Read More ➞</p>
-        </div>
-      </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon bg-dark service-carousel__round" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon bg-dark service-carousel__round" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+            <button type="button"
+                    class="w-slider-arrow w-slider-arrow--prev slider-arrow_Yvf slider-arrow--prev_Eis slider-arrow--with-dots_Phm slick-prev slick-arrow"
+                    aria-disabled="false" style="">
+                <div class="slider-arrow__click-zone_uLX"></div>
+                <svg class="arrow-svg_1j4" viewBox="0 0 30 30">
+                    <defs>
+                        <path
+                                d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z"
+                                id="a-1706886836795"></path>
+                    </defs>
+                    <use fill-rule="nonzero" opacity=".8" xlink:href="#a-1706886836795"></use>
+                </svg>
+            </button>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon bg-dark service-carousel__round" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-      <span class="carousel-control-next-icon bg-dark service-carousel__round" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-      <button type="button"
-        class="w-slider-arrow w-slider-arrow--prev slider-arrow_Yvf slider-arrow--prev_Eis slider-arrow--with-dots_Phm slick-prev slick-arrow"
-        aria-disabled="false" style="">
-        <div class="slider-arrow__click-zone_uLX"></div><svg class="arrow-svg_1j4" viewBox="0 0 30 30">
-          <defs>
-            <path
-              d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z"
-              id="a-1706886836795"></path>
-          </defs>
-          <use fill-rule="nonzero" opacity=".8" xlink:href="#a-1706886836795"></use>
+    <button type="button"
+            class="w-slider-arrow w-slider-arrow--prev slider-arrow_Yvf slider-arrow--prev_Eis slider-arrow--with-dots_Phm slick-prev slick-arrow"
+            aria-disabled="false" style="">
+        <div class="slider-arrow__click-zone_uLX"></div>
+        <svg class="arrow-svg_1j4" viewBox="0 0 30 30">
+            <defs>
+                <path
+                        d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z"
+                        id="a-1706886836795"></path>
+            </defs>
+            <use fill-rule="nonzero" opacity=".8" xlink:href="#a-1706886836795"></use>
         </svg>
-      </button>
-  </div>
-  <button type="button"
-    class="w-slider-arrow w-slider-arrow--prev slider-arrow_Yvf slider-arrow--prev_Eis slider-arrow--with-dots_Phm slick-prev slick-arrow"
-    aria-disabled="false" style="">
-    <div class="slider-arrow__click-zone_uLX"></div><svg class="arrow-svg_1j4" viewBox="0 0 30 30">
-      <defs>
-        <path
-          d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z"
-          id="a-1706886836795"></path>
-      </defs>
-      <use fill-rule="nonzero" opacity=".8" xlink:href="#a-1706886836795"></use>
-    </svg>
-  </button>
-  <div class="slider-arrow__click-zone_uLX"></div>
-  <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap" rel="stylesheet">
+    </button>
+    <div class="slider-arrow__click-zone_uLX"></div>
+    <link href="https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap" rel="stylesheet">
 </div>
