align carousel plan, fix select button

--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -51,7 +51,7 @@
             <div class="pricing__select-button">
               <a href="#" class="pricing__select-plan"
                 ><span class="pricing__select-bn-content">Select Plan</span
-                ><span class="pricing__select-bn-arrow">&rarr;</span>
+                ><span class="pricing__select-bn-arrow">&#10132;</span>
               </a>
             </div>
           </article>
@@ -73,7 +73,7 @@
             <div class="pricing__select-button">
               <a href="#" class="pricing__select-plan"
                 ><span class="pricing__select-bn-content">Select Plan</span
-                ><span class="pricing__select-bn-arrow">&rarr;</span>
+                ><span class="pricing__select-bn-arrow">&#10132;</span>
               </a>
             </div>
           </article>
@@ -93,7 +93,7 @@
             <div class="pricing__select-button">
               <a href="#" class="pricing__select-plan"
                 ><span class="pricing__select-bn-content">Select Plan</span
-                ><span class="pricing__select-bn-arrow">&rarr;</span>
+                ><span class="pricing__select-bn-arrow">&#10132;</span>
               </a>
             </div>
           </article>
