--- a/header.partial.html
+++ b/header.partial.html
@@ -1,10 +1,10 @@
 <header class="container-lg row justify-content-lg-center">
-    <nav class="navbar navbar-expand-lg navbar-light justify-content-lg-center col-md-12">
-        <nav class="navbar navbar-expand-lg navbar-light justify-content-center col-12 ml-1">
+    <nav class="navbar navbar-expand-md navbar-light justify-content-lg-center col-md-12 ">
+        <nav class="navbar navbar-expand-md navbar-light justify-content-center col-12 ml-1">
             <a class="navbar-brand " href="index.html"> <img class="" src="img/header_logo.webp" width="140"
                                                     height="35"
                                                     alt="logo"></a>
-            <a class="navbar-brand pl-3 randomColorText" href="https://2024js.github.io/vetesite2/">OUR FRIENDS!<img class="w-100 " src="img/our-friends.svg" width="20"
+            <a class="navbar-brand pl-3 randomColorText mr-lg-0" href="https://2024js.github.io/vetesite2/">OUR FRIENDS!<img class="w-100 " src="img/our-friends.svg" width="20"
                                                                              height="20"
                                                                              alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse"
@@ -14,28 +14,28 @@
             </button>
             <!--<button class="btn btn-info buttonGreat">Click on me!</button>-->
 
-            <div class="collapse navbar-collapse  mx-auto" id="navbarSupportedContent">
+            <div class="collapse navbar-collapse mx-auto font-weight-bold navbar-bg" id="navbarSupportedContent">
 
-                <ul class="navbar-nav mx-auto bold">
-                    <li class="nav-item active mx-auto">
+                <ul class="navbar-nav text-center mx-auto text-info">
+                    <li class="nav-item active ">
                         <a class="nav-link" href="discov-on-react.html">Discoveries (onReact)</a>
                     </li>
-                    <li class="nav-item active mx-auto">
+                    <li class="nav-item active ml-lg-3 mr-lg-3">
                         <a class="nav-link" href="facts.html">Facts</a>
                     </li>
-                    <li class="nav-item active mx-auto">
-                        <a class="nav-link" href="discov-on-react.html">Your Wishes</a>
+                    <li class="nav-item active ">
+                        <a class="nav-link" href="wishes.html">Your Wishes</a>
                     </li>
-                    <li class="nav-item active mx-auto">
+                    <!--<li class="nav-item active mx-auto">
                         <a class="nav-link" href="#">Testimonials</a>
                     </li>
                     <li class="nav-item active mx-auto">
                         <a class="nav-link" href="#">Contact us</a>
-                    </li>
+                    </li>-->
                 </ul>
 
 
-                <form class="form-inline my-2 my-lg-0">
+                <form class="form-inline my-2 my-lg-0 ml-xl-2">
                     <a class="navbar-brand mr-2 ml-auto" href="https://facebook.com/">
                         <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
                              class="bi bi-facebook "
