add Wish-nav, wish->DB

--- a/header.partial.html
+++ b/header.partial.html
@@ -1,4 +1,4 @@
-<header class="container-lg row justify-content-lg-center">
+<header class="container-lg row justify-content-lg-center w-100">
     <nav class="navbar navbar-expand-md navbar-light justify-content-lg-center col-md-12 ">
         <nav class="navbar navbar-expand-md navbar-light justify-content-center col-12 ml-1">
             <a class="navbar-brand " href="index.html"> <img class="" src="img/header_logo.webp" width="140"
