--- a/wishes.html
+++ b/wishes.html
@@ -19,8 +19,8 @@
 <section class="chat container container-lg col-12 col-md-8 text-center mt-5">
     <h2 class="mb-3 mt-5 h1 text-info bg-white font-weight-bold">Your wishes</h2>
     <input type="text" class="chat__text form-control mb-3"/>
-    <button class="chat__button btn btn-info mr-5">Send</button>
-    <button class="chat__refresh btn btn-info">Refresh</button>
+    <button class="chat__button btn btn-info px-5">Send</button>
+    <!--<button class="chat__refresh btn btn-info">Refresh</button>-->
     <div class="response-wrap d-grid"><p class="chat__response bg-white mx-auto"></p></div>
 </section>
 
