add carousel buttons and media query

--- a/index.contacts.partial.html
+++ b/index.contacts.partial.html
@@ -1,4 +1,4 @@
-<section class="contacts">
+<section class="contacts" id="contact-form">
     <div class="contacts__commonbox container">
         <div class="row">
             <div class="contacts__information col-12 col-lg-6">
