--- a/index.pricing.partial.html
+++ b/index.pricing.partial.html
@@ -52,7 +52,7 @@
                 <li class="pricing__features-crossmark">Dental care</li>
               </ul>
               <div class="pricing__select-button">
-                <a href="#" class="pricing__select-plan"
+                <a href="#contact-form" class="pricing__select-plan"
                   ><span class="pricing__select-bn-content">Select Plan</span
                   ><span class="pricing__select-bn-arrow">&#10132;</span>
                 </a>
@@ -76,7 +76,7 @@
                 </li>
               </ul>
               <div class="pricing__select-button">
-                <a href="#" class="pricing__select-plan"
+                <a href="#contact-form" class="pricing__select-plan"
                   ><span class="pricing__select-bn-content">Select Plan</span
                   ><span class="pricing__select-bn-arrow">&#10132;</span>
                 </a>
@@ -100,7 +100,7 @@
                 </li>
               </ul>
               <div class="pricing__select-button">
-                <a href="#" class="pricing__select-plan"
+                <a href="#contact-form" class="pricing__select-plan"
                   ><span class="pricing__select-bn-content">Select Plan</span
                   ><span class="pricing__select-bn-arrow">&#10132;</span>
                 </a>
