--- a/banner.partial.dog-about-us.html
+++ b/banner.partial.dog-about-us.html
@@ -9,7 +9,7 @@
                 Make Appointment >
             </button>
             <button class="">
-                <a href="#" class="button__banner--pagedown pl-3 pr-4 ">
+                <a href="tel:+12345678900" class="button__banner--pagedown pl-3 pr-4 ">
                     +1 (234) 567 89 00</a>
             </button>
         </div>
