--- a/banner.partial.dog-about-us.html
+++ b/banner.partial.dog-about-us.html
@@ -8,8 +8,8 @@
             <button id="appointment-btn" class="button__banner--pagedown mb-4 mr-md-4" type="button__banner--pagedown">
                 Make Appointment >
             </button>
-            <button class="">
-                <a href="tel:+12345678900" class="button__banner--pagedown pl-3 pr-4 ">
+            <button class="bg-transparent">
+                <a href="tel:+12345678900" class="button__banner--tel text-white pl-3 pr-4 ">
                     +1 (234) 567 89 00</a>
             </button>
         </div>
