--- a/index.carousel.with.animal.partial.html
+++ b/index.carousel.with.animal.partial.html
@@ -1,11 +1,11 @@
 <div class="animal-carousel container-lg col-8 mx-auto d-flex flex-column">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carouselExampleIndicatorss" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators bg-info mt-5 col-2 mx-auto pr-0 animal-carousel__round">
             <li data-target="#carouselExampleIndicators bg-dark" data-slide-to="0" class="active"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner">
+        <div class="carousel-inner animal-carousel-inner">
             <div class="carousel-item active card h-100">
                 <img class="animal-carousel__img img-fluid card-img-top rounded-circle align-center mx-auto mt-5 mb-4"
                      src="img/casper.webp"
@@ -49,11 +49,11 @@
                 </div>
             </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <a class="carousel-control-prev" href="#carouselExampleIndicatorss" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon bg-dark animal-carousel__round" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <a class="carousel-control-next" href="#carouselExampleIndicatorss" role="button" data-slide="next">
             <span class="carousel-control-next-icon bg-dark animal-carousel__round" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
