--- a/index.partners-carousel.partial.html
+++ b/index.partners-carousel.partial.html
@@ -3,7 +3,7 @@
       <h2 class="partners__title-main">&mdash; Partners</h2>
       <p class="partners__title-description">Our Partners You Can Trust</p>
   </div>
-  <div class="partners__carousel">
+  <div class="partners__carousel col-12">
       <button class="partners__carousel-btn-prev">
           <svg class="arrow-svg_1j4" viewBox="0 0 30 30"><defs><path d="M19.533 15l-9.1-9.45c-.577-.6-.577-1.5 0-2.1.578-.6 1.445-.6 2.023 0l10.11 10.5c.29.3.434.75.434 1.05 0 .45-.144.75-.433 1.05l-10.111 10.5c-.29.3-.578.45-1.012.45-.433 0-.722-.15-1.01-.45-.578-.6-.578-1.5 0-2.1l9.1-9.45z" id="a-1704748140718"></path></defs><use fill-rule="nonzero" opacity=".8" xlink:href="#a-1704748140718"></use></svg>
       </button>
