--- a/index.care.partial.html
+++ b/index.care.partial.html
@@ -1,4 +1,4 @@
-<section class="care">
+<section class="care mt-5 mb-5">
   <h1 class="main-title">- We provide care that your pet deserves</h1>
     <h2 class="sub-title">Do you urgently need a veterinarian?
       <br>Just call us +1 (234) 567 89 00</h2>
