--- a/index.care.partial.html
+++ b/index.care.partial.html
@@ -1,8 +1,8 @@
-<section class="care mt-5 mb-5">
-  <h1 class="main-title">- We provide care that your pet deserves</h1>
-    <h2 class="sub-title">Do you urgently need a veterinarian?
-      <br>Just call us +1 (234) 567 89 00</h2>
-      <p class="emergency-text">For emergencies, we have a veterinarian on duty 
-        <br>after the closure of the clinic.
-      </p>
-</section>
+<section class="care mt-5 mb-5" onmouseover="changeBackground()" onmouseout="resetBackground()">
+        <h1 class="main-title">- We provide care that your pet deserves</h1>
+        <h2 class="sub-title">Do you urgently need a veterinarian?
+            <br>Just call us +1 (234) 567 89 00</h2>
+        <p class="emergency-text">For emergencies, we have a veterinarian on duty 
+            <br>after the closure of the clinic.
+        </p>
+    </section>
