--- a/index.care.partial.html
+++ b/index.care.partial.html
@@ -6,3 +6,12 @@
             <br>after the closure of the clinic.
         </p>
     </section>
+      <script>
+        function changeBackground() {
+            document.querySelector('.care').style.backgroundImage = 'url("NEW_IMAGE.JPG")';
+        }
+
+        function resetBackground() {
+            document.querySelector('.care').style.backgroundImage = 'url("IMG_CARE.JPG")';
+        }
+    </script>
