--- a/index.care.partial.html
+++ b/index.care.partial.html
@@ -8,10 +8,10 @@
     </section>
       <script>
         function changeBackground() {
-            document.querySelector('.care').style.backgroundImage = 'url("NEW_IMAGE.JPG")';
+            document.querySelector('.care').style.backgroundImage = 'url("../IMG_Space_Back.JPG")';
         }
 
         function resetBackground() {
-            document.querySelector('.care').style.backgroundImage = 'url("IMG_CARE.JPG")';
+            document.querySelector('.care').style.backgroundImage = 'url("../IMG_CARE.JPG")';
         }
     </script>
