--- a/index.about-us.partial.html
+++ b/index.about-us.partial.html
@@ -10,7 +10,7 @@
                     <li class="service-item"><img class="dog_print" src="img/dog_print.jpg" alt="print" style="display: inline;"> All necessary examinations in one comfortable place;</li>
                     <li class="service-item"><img class="dog_print" src="img/dog_print.jpg" alt="print" style="display: inline;"> A large list of related services at reasonable prices.</li>
                 </ul>
-                <a href="#" class="pricing_button">See Pricing →</a>
+                <a href="#pricing-info" class="pricing_button">See Pricing →</a>
                 <div id="employeeCounterDisplay">We have <span id="workerCount">...</span> workers.</div>
                 <script src="js/workers-counter.js"></script>
             </section>
